--- a/.github/workflows/ci-kilted.yaml
+++ b/.github/workflows/ci-kilted.yaml
@@ -17,54 +17,43 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - docker-image: "ubuntu:24.04"
-            ros-distro: "kilted"
-            ros-repo-packages: "-testing"
-          - docker-image: "ubuntu:24.04"
-            ros-distro: "kilted"
-            ros-repo-packages: ""
+          - ros-repo-packages: "-testing"
+            upstream-repos: ""
+          - ros-repo-packages: ""
+            upstream-repos: ""
+          - ros-repo-packages: "-testing"
+            upstream-repos: "gz_ros2_control.kilted.repos"
     env:
-      ROS_DISTRO: ${{ matrix.ros-distro }}
-      ROS_REPO_PACKAGES: ${{ matrix.ros-repo-packages }}
+      ROS_DISTRO: kilted
     container:
-      image: ${{ matrix.docker-image }}
+      image: ghcr.io/ros-controls/ros:kilted-ubuntu${{ matrix.ros-repo-packages }}
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      if: github.event_name != 'schedule'
+      uses: actions/checkout@v4
+    - name: Checkout code for scheduled workflow
+      if: github.event_name == 'schedule'
+      uses: actions/checkout@v4
+      with:
+        ref: kilted
+    - name: Checkout ros2_control framework for semi-binary builds
+      if: ${{ matrix.upstream-repos != '' }}
+      run: vcs import --input ${{ matrix.upstream-repos }}
     - name: Setup colcon workspace
       id: configure
       shell: bash
       run: |
-        export DEBIAN_FRONTEND=noninteractive
-        apt update -qq
-        apt install -qq -y lsb-release wget curl gnupg2 git
-        cd ..
-        mkdir -p /home/ros2_ws/src
-        cp -r gz_ros2_control /home/ros2_ws/src/
-        curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg
-        echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2$ROS_REPO_PACKAGES/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | tee /etc/apt/sources.list.d/ros2.list > /dev/null
-
-        apt-get update && apt-get upgrade -q -y
-        apt-get update && apt-get install -qq -y \
-          dirmngr \
-          python3-colcon-ros \
-          python3-colcon-common-extensions \
-          python3-rosdep \
-          build-essential
-
-        cd /home/ros2_ws/src/
-        rosdep init
+        apt-get update
         rosdep update
-        rosdep install --from-paths ./ -i -y --rosdistro ${ROS_DISTRO} --ignore-src
+        rosdep install --from-paths ./ -i -y --rosdistro ${ROS_DISTRO}
     - name: Build project
       id: build
       run: |
-        cd /home/ros2_ws/
         . /opt/ros/${ROS_DISTRO}/local_setup.sh
         colcon build --packages-up-to gz_ros2_control_demos gz_ros2_control_tests
     - name: Run tests
       id: test
       run: |
-        cd /home/ros2_ws/
         . /opt/ros/${ROS_DISTRO}/local_setup.sh
         colcon test --event-handlers console_direct+ --packages-select gz_ros2_control gz_ros2_control_demos gz_ros2_control_tests
         colcon test-result
